@@ -2,6 +2,7 @@
 
 	* Added explicit cdon/cdoff to the indexer configuration
 	* Added a method to obtain configuration lines directly from configuration. This will be used when usergroup indexing is impemented.
+	* Removed anonymous and "any" items from user groups; clarified some form titles
 
 2009-10-22  Dmitry Dulepov  <dmitry@typo3.org>
 
